--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_rating_bar: ^3.2.0+1
+
 
 
   # The following adds the Cupertino Icons font to your application.
